bluetooth: Handle two consecutives requestDevice calls.

WebBluetoothServiceImpl will close any open choosers when calling
RequestDevice. BluetoothDeviceChooserController runs its error callback
when being destroyed if there are any open chooser.

BUG=616222

Review-Url: https://codereview.chromium.org/2030973002
Cr-Commit-Position: refs/heads/master@{#399836}

Former-commit-id: 8eba1a9d135b69979dd20c1c8c49f4cfdb3ee6d7